--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -8,8 +8,7 @@
 
   display: flex;
   align-items: center;
-  width: min(300px, 200px);
-  margin-right: 50px;
+  flex: 1 1 auto;
   border: 1px solid
     var(
       --color-border-searchbar,
