--- a/src/styles/variables/_layout.scss
+++ b/src/styles/variables/_layout.scss
@@ -1,14 +1,14 @@
 @use "@sass-butler/functions" as butler-fn;
 
 // Breakpoint Vars
-$xxs: butler-fn.px-to-rem(375); // Smartphone Portrait
-$xs: butler-fn.px-to-rem(568); // Smartphone Landscape
-$sm: butler-fn.px-to-rem(768); // Tablet Portrait
-$md: butler-fn.px-to-rem(1024); // Tablet Landscape
-$lg: butler-fn.px-to-rem(1260); // Kleinerer Desktop
-$xlg: butler-fn.px-to-rem(1440); // Widescreen
-$fhd: butler-fn.px-to-rem(1920); // Full HD
-$uhd: butler-fn.px-to-rem(2560); // UHD
+$xxs: butler-fn.px-to-rem(376); // Smartphone Portrait
+$xs: butler-fn.px-to-rem(569); // Smartphone Landscape
+$sm: butler-fn.px-to-rem(769); // Tablet Portrait
+$md: butler-fn.px-to-rem(1025); // Tablet Landscape
+$lg: butler-fn.px-to-rem(1261); // Kleinerer Desktop
+$xlg: butler-fn.px-to-rem(1441); // Widescreen
+$fhd: butler-fn.px-to-rem(1921); // Full HD
+$uhd: butler-fn.px-to-rem(2561); // UHD
 
 // Breakpoint Map
 $custom-breakpoints: (
